Add FEAT buttons

--- a/Tarea 1/html/agregar-artesano.html
+++ b/Tarea 1/html/agregar-artesano.html
@@ -77,9 +77,10 @@
             <!--ponerle name a todos los inputs, para tener acceso en el backend-->
             <button id="asubmit-btn" type="button"> Registrar Artesano </button>
         </form>
-        <div id="apopup-box" hidden>
+        <div id="popup-box" hidden>
             <h2 id="popup-msg"></h2>
-            <ul id="popup-list"></ul>
+            <button id="b1"> Sí, confirmo </button>
+            <button id="b2"> No, quiero volver al formulario </button>
         </div>
     </div>
     <!--Agregar validacion con script de javas en esta parte--> 
