--- a/Tarea 1/html/agregar-hincha.html
+++ b/Tarea 1/html/agregar-hincha.html
@@ -131,9 +131,10 @@
             <!--ponerle name a todos los inputs, para tener acceso en el backend-->
             <button id="hsubmit-btn" type="button"> Registrar Hincha </button>
         </form>
-        <div id="hpopup-box" hidden>
+        <div id="popup-box" hidden>
             <h2 id="popup-msg"></h2>
-            <ul id="popup-list"></ul>
+            <button id="b1"> Sí, confirmo </button>
+            <button id="b2"> No, quiero volver al formulario </button>
         </div>
     </div>
     <!--Agregar validacion con script de javas en esta parte-->
